--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     justify-content: center;
     height: 100vh;
     color: rgb(0, 0, 0);
+    overflow-x: hidden; /* Ocultar desplazamiento horizontal */
+
 }
 #titulo{
     font-size: 6vw;
@@ -33,6 +35,7 @@ body {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
 }
 .container {
     background-color: #c6c6c6;
@@ -43,6 +46,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 0%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
 }
 
 form {
@@ -70,6 +74,7 @@ label {
     font-family: 'Inconsolata', monospace;
     border-radius: 8px;
     word-wrap: break-word;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
 }
 #opciones:hover {
     flex: 1; /* El input ocupa todo el espacio restante */
@@ -95,10 +100,14 @@ label {
     cursor: pointer;
     font-size: 30px;
     font-family: 'Kdam Thmor Pro', sans-serif;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
+
 }
 
 #convertButton:hover {
     background-color: #45a049;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
+
 }
 #dowload {
     background-color: #4caf4f95;
@@ -138,6 +147,8 @@ label {
     position: absolute;
     top: 0;
     right: 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
+
 }
 #instrucc {
     background-color: #7700008a;
@@ -151,6 +162,7 @@ label {
     position: absolute;
     top: 0;
     left: 0;
+
 }
 #top {
     background-color: #7700008a;
@@ -182,11 +194,15 @@ input[type="text" i] {
 button {
     font-size: 1.5vw;
     font-family: 'Inconsolata', monospace;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
+    margin-left: 1%;
+    margin-right: 1%;
 }
 button:hover {
     font-size: 1.5vw;
     font-family: 'Inconsolata', monospace;
     background-color: red;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Modifica el tamaño y la difuminación */
 }
 @media (max-width: 1400px) {
     input[type="text" i] {
